<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="@string/txtTitle"
        android:textColor="#FF0000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtWeight"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:ems="10"
        android:gravity="clip_horizontal"
        android:hint="@string/hint"
        android:inputType="number"
        android:textSize="25sp" />

    <RadioGroup
        android:layout_width="333dp"
        android:layout_height="136dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="206dp">

        <RadioButton
            android:id="@+id/radLbToKilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:checked="true"
            android:text="@string/radLbToKilo"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radKiloToLb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/radKiloToLb"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="289dp"
        android:layout_height="69dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="148dp"
        android:gravity="center_horizontal"
        android:text="@string/btnConvert"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="279dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="93dp"
        android:textColor="#FF0000"
        android:textSize="25sp"
        tools:text="output from calculation" />

</RelativeLayout>